[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tes3mp-easy"
version = "1.0.0"
description = "The one-click setup tool for Morrowind Multiplayer on Linux"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Jonathan Oakey", email = "jonathan@example.com"}
]
keywords = ["morrowind", "tes3mp", "linux", "gaming", "openmw"]
dependencies = [
    "rich>=13.0.0",
    "requests>=2.31.0"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment :: Role-Playing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
"Homepage" = "https://github.com/flywiththetide/TES3MP-Easy"
"Bug Tracker" = "https://github.com/flywiththetide/TES3MP-Easy/issues"

[project.scripts]
openmw-multi = "tes3mp_easy.main:main"
